--- a/GamingBacklog/pom.xml
+++ b/GamingBacklog/pom.xml
@@ -15,6 +15,12 @@
         <spring.version>5.1.4.RELEASE</spring.version>
         <jstl.version>1.2</jstl.version>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+        <hibernate-core.version>5.2.9.Final</hibernate-core.version>
+        <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
+        <spring-orm.version>4.3.7.RELEASE</spring-orm.version>
+        <spring-data-jpa.version>1.11.1.RELEASE</spring-data-jpa.version>
+        <mysql-connector-java.version>5.1.39</mysql-connector-java.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     </properties>
 
     <dependencies>
@@ -77,7 +83,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${javax.servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -91,31 +97,31 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.2.9.Final</version>
+            <version>${hibernate-core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.4.1.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>4.3.7.RELEASE</version>
+            <version>${spring-orm.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>${mysql-connector-java.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>1.11.1.RELEASE</version>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
         <dependency>
