--- a/GamingBacklog/pom.xml
+++ b/GamingBacklog/pom.xml
@@ -10,6 +10,10 @@
     <packaging>war</packaging>
 
     <properties>
+        <INSTANCE_CONNECTION_NAME>regal-muse-230717:europe-west1:gamingbacklog</INSTANCE_CONNECTION_NAME>
+        <user>root</user>
+        <password>coderslab</password>
+        <database>gamingbacklog</database>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.1.4.RELEASE</spring.version>
